# cpp_projects

./: .gitignore  README.md
completed/CLI multi parser [VS2019 clipp]/: main.cpp  main.plist
completed/CLI single parser [CMake clipp]/: CMakeLists.txt  LICENSE.md  README.md
completed/CLI single parser [CMake clipp]/apps/: CMakeLists.txt  app.cpp
completed/CLI single parser [VS2019 clipp]/: main.cpp
completed/basic_plot_app/: BasicPlotApp.ui  basicplotapp.pro  basicplotdialog.cpp  basicplotdialog.hpp  main.cpp
completed/basic_qt_app/: BasicQtApp.ui  basic_qt_app.pro  basicqtdialog.cpp  basicqtdialog.hpp  main.cpp
completed/displayimage/: Makefile  displayimage.cpp
completed/focus_precision_statistics/: CMakeLists.txt  README.md
completed/focus_precision_statistics/apps/: CMakeLists.txt  app.cpp
completed/itk_test/: CMakeLists.txt  ITK.make  Makefile  README.md  main.cpp
completed/lest_test/: lest_test.cpp
completed/libtiff_test/: Makefile  main.cpp
completed/qt_app_framework/: MainWindow.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  qt_app_framework.pro
completed/qt_main_app/: CMakeLists.txt
completed/qtdisplayimagecv/: MainWindow.ui  gui.cpp  gui.hpp  mat2qpixmap.cpp  mat2qpixmap.hpp  qtdisplayimagecv.pro
completed/qtfilereadlbl/: main.cpp  qtfilereadlbl.pro
completed/qtreadcsvfile/: main.cpp  qtreadcsvfile.pro
completed/simplehexdump/: Makefile  simplehexdump.cpp
completed/study_cases_cli/: Makefile  cast_logical_expressions.cpp  containers.cpp  gaussian.cpp  random_numbers.cpp  smart_pointers.cpp  test_clipp.cpp  va_list.cpp
completed/vs_build_tools_test/: hello_world.cpp
work_in_progress/: Makefile
work_in_progress/CLI multi parser [VS2019 clipp]/: main.cpp
work_in_progress/CLI single parser [CMake clipp]/: CMakeLists.txt  README.md  main.cpp  references.txt
work_in_progress/CLI single parser [CMake clipp]/apps/: app.cpp
work_in_progress/CLI single parser [CMake clipp]/builds/Debug/: CMakeCache.txt  Makefile  cmake_debug.bat  cmake_install.cmake
work_in_progress/CLI single parser [CMake clipp]/builds/MinSizeRel/: cmake_minsizerel.sh
work_in_progress/CLI single parser [CMake clipp]/src/: CMakeLists.txt
work_in_progress/CLI single parser [CMake clipp]/tests/: CMakeLists.txt  test_validators_1.cpp  test_validators_2.cpp  test_validators_new.cpp
work_in_progress/CMake_Testing_Grounds/cmake_opencv_test/source/: CMakeLists.txt  main.cpp  setup_vars_opencv.cmd
work_in_progress/CMake_Testing_Grounds/image_magick_test/: CMakeLists.txt
work_in_progress/Command Line Framework [VS2017 clipp]/: Makefile  main.cpp
work_in_progress/Command Line Framework [VS2019 clipp]/: Makefile  Makefile.old  Validate path flowchart.dot  main.cpp  validators.cpp  validators.hpp
work_in_progress/Command Line Framework [boost]/: .Makefile.swp  .clf_boost.cpp.swp  Makefile  clf_boost  clf_boost.cpp
work_in_progress/Command Line Framework [getopt]/: CommandLineFramework_getopt.cpp  CommandLineFramework_getopt.cpp~  Makefile  Makefile~  getopt_long_example.cc
work_in_progress/Programmig Principles and Practice Using C++ [VS2017]/: input_and_type.cpp
work_in_progress/Qt Test Box/: CMakeLists.txt  LICENSE.BSD3  README.md  References.md
work_in_progress/Qt Test Box/apps/: CMakeLists.txt  custom_graph_framework.cpp  data_model.cpp  data_model.hpp  qt_test_box.cpp  qt_test_chart.cpp
work_in_progress/Testing Grounds/: Makefile  hello_string  hello_string.cpp  hello_world.cpp  main.cpp  qt_testing_grounds  qt_testing_grounds.pro
work_in_progress/VS Build Tools Test/: hello_world.cpp
work_in_progress/cmake_compiler_flags/: CMakeLists.txt
work_in_progress/dataplot/: MainWindow.ui  Makefile  dataplot.pro  gui.cpp  gui.hpp  main.cpp
work_in_progress/focus_precision_analyzer/: CMakeLists.txt  README.md  validators.hpp
work_in_progress/focus_precision_analyzer/apps/: CMakeLists.txt  app.cpp
work_in_progress/image_magick_test/: CMakeLists.txt
work_in_progress/itk_tiff_test/: CMakeLists.txt  main.cpp
work_in_progress/libtiff_test/: CMakeLists.txt  Makefile  main.cpp  output.txt
work_in_progress/libtiff_test/LibTIFFInterface/: LibTIFFInterface.cpp  LibTIFFInterface.hpp  LibTIFFInterface.hpp.old
work_in_progress/libtiff_test/include/: LibTIFFInterface.cpp  LibTIFFInterface.hpp
work_in_progress/libtiff_test/libtiff/: libtiff.ilk  libtiff_i.exp
work_in_progress/libtiff_test/tests/: .test_libtiff_interface.cpp.swo  Makefile  test_libtiff_interface.cpp
work_in_progress/mda/: Makefile  main.cpp  mda  mda.pro  (+1 more)
work_in_progress/opencv_tiff_validator/: CMakeLists.txt  README.md
work_in_progress/opencv_tiff_validator/apps/: CMakeLists.txt  read_tiff.cpp  validate_tiff.cpp
work_in_progress/opencv_tiff_validator/include/input_validators++/: validators.hpp
work_in_progress/opencv_tiff_validator/src/: CMakeLists.txt  validators.cpp
work_in_progress/qt_focus_precision_analyzer/apps/: CMakeLists.txt  app.cpp  common.hpp  custom_header_view.cpp  custom_header_view.hpp  data_model.cpp  data_model.hpp  mainwindow.cpp  mainwindow.hpp  table_view_widget.cpp  table_view_widget.hpp
work_in_progress/qt_focus_precision_analyzer/tests/: CMakeLists.txt  test_table_view.cpp
work_in_progress/qt_focus_precision_analyzer/tests/data/: QAFocusPrecisionTest(1900-01-01 17.16.55).rmd
work_in_progress/qt_opengl_window/: CMakeLists.txt  README.md  References.md
work_in_progress/qt_opengl_window/apps/: CMakeLists.txt  app.cpp  app.qrc  mainwindow.cpp  mainwindow.hpp  vertex.hpp
work_in_progress/tiffio++/apps/: CMakeLists.txt  app.cpp  cimg_test.cpp  maketesttif.cpp  tifinfo.cpp  tifinfoplus.cpp
work_in_progress/tiffio++/tests/: CMakeLists.txt  test_exception_class.cpp  test_fileaccessmode_class.cpp  test_tiffio_openclose.cpp  test_tiffio_tag.cpp
work_in_progress/tiffio++/tests/data/: 14351454195546406.tiff  mri_be.tif
work_in_progress/wavelets_simple/: CMakeLists.txt  README.md
work_in_progress/wavelets_simple/apps/: CMakeLists.txt  app.cpp  wavelet_transform.hpp
work_in_progress/wavelets_simple/src/: CMakeLists.txt  validators.cpp
(+73 files in other folders)
