
set(HEADER_LIST "${tiffio++_SOURCE_DIR}/extern/clipp/clipp.hpp")
set(HEADER_LIST "${tiffio++_SOURCE_DIR}/extern/libtiff/tiffio.h")
set(HEADER_LIST "${tiffio++_SOURCE_DIR}/include/input_validators++/validators.hpp")
set(HEADER_LIST "${tiffio++_SOURCE_DIR}/include/tiffio++/tiffio++.hpp")

add_executable(app app.cpp)
add_executable(tifinfo tifinfo.cpp)
add_executable(tifinfoplus tifinfoplus.cpp)
add_executable(maketesttif maketesttif.cpp)

target_include_directories(app PRIVATE ../extern/clipp)
target_include_directories(app PRIVATE ../extern/libtiff)
target_include_directories(app PRIVATE ../include)
target_include_directories(tifinfo PRIVATE ../extern/clipp)
target_include_directories(tifinfo PRIVATE ../include)
target_include_directories(tifinfoplus PRIVATE ../extern/clipp)
target_include_directories(tifinfoplus PRIVATE ../include)
target_include_directories(maketesttif PRIVATE ../extern/clipp)
target_include_directories(maketesttif PRIVATE ../include)

target_compile_features(app PRIVATE cxx_std_17)
target_compile_features(tifinfo PRIVATE cxx_std_17)
target_compile_features(tifinfoplus PRIVATE cxx_std_17)
target_compile_features(maketesttif PRIVATE cxx_std_17)

target_link_libraries(app PRIVATE input_validators++)
target_link_libraries(app PRIVATE tiff)
target_link_libraries(tifinfo PRIVATE input_validators++)
target_link_libraries(tifinfo PRIVATE tiff)
target_link_libraries(tifinfoplus PRIVATE input_validators++)
target_link_libraries(tifinfoplus PRIVATE tiff)
target_link_libraries(maketesttif PRIVATE input_validators++)
target_link_libraries(maketesttif PRIVATE tiff)
